alignment fix

--- a/moon12/static/css/base.css
+++ b/moon12/static/css/base.css
@@ -144,7 +144,7 @@ body {
 
 .home .gallery-map {
   height: 300px;
-  margin-left:25px;
+  margin-left:0px;
 }
 
 /* EXHIBITS */
